# board-rp2040-mammon

./: .gitignore  README.md
1.Preview/: resources.txt
2.Hardware/: README.md
4.Manual/2.ESP8266/: README.md
5.C_CPP/1.Toolchain/sdk/: README.md
5.C_CPP/2.Examples/CMake/: board_conf.h
5.C_CPP/2.Examples/CMake/ext_cmdline/: CMakeLists.txt  shell.h  version.cmake  version.h
5.C_CPP/2.Examples/CMake/flash_prog/: CMakeLists.txt  flash_prog.uf2
5.C_CPP/2.Examples/CMake/i2c_mpu6050/: CMakeLists.txt
5.C_CPP/2.Examples/CMake/lang_lua/: CMakeLists.txt  README.md  lang_lua.uf2  lua_api.cpp  lua_api.h  main.cpp
5.C_CPP/2.Examples/CMake/lang_lua/lib/lua/: CMakeLists.txt
5.C_CPP/2.Examples/CMake/pio_st7789/: pio_st7789.uf2
5.C_CPP/2.Examples/CMake/pio_ws2812/: CMakeLists.txt
5.C_CPP/2.Examples/CMake/spi_st7789/: lcd.c  st7789.h
5.C_CPP/2.Examples/CMake/tim_keyfifo/: CMakeLists.txt
5.C_CPP/2.Examples/CMake/tim_keyfifo/libs/keyfifo/: keyfifo.c  keyfifo.h
5.C_CPP/2.Examples/CMake/uart_esp01/: CMakeLists.txt
5.C_CPP/2.Examples/CMake/uart_esp01/lib/espat/: CMakeLists.txt  espat_wifi.h  espat_wifi_conf.h
5.C_CPP/2.Examples/CMake/uart_esp01/src/: CMakeLists.txt
5.C_CPP/2.Examples/CMake/usb_printf/: CMakeLists.txt
5.C_CPP/2.Examples/MDK/Pico_Template/: v2.20.md
5.C_CPP/2.Examples/MDK/Pico_Template/project/mdk/: template.uvoptx  template.uvprojx
5.C_CPP/2.Examples/MDK/ext_EmberGL/libraries/st7789/: lcd.h
5.C_CPP/2.Examples/MDK/ext_EmberGL/project/mdk/: AC6-flash.BAT  Auto_FcArm_Cmd_inp.Bak  template.uf2  template.uvguix.uYanki  template.uvoptx  template.uvprojx
5.C_CPP/3.Example/: board_conf.h
5.C_CPP/3.Example/pio/ws2812/: pio_ws2812.uf2
5.C_CPP/CMake/1.Toolchain/: README.md  README.txt
5.C_CPP/CMake/3.Example/: README.md
5.C_CPP/CMake/3.Example/ext_cmdline/: bsp_conf.h  cmds.c  cmds.h  main.c  shell.c  shell_defs.h
5.C_CPP/CMake/3.Example/ext_modbus/: CMakeLists.txt  README.md
5.C_CPP/CMake/3.Example/ext_modbus/inc/: config.h  para_group.h  para_table.h  types.h
5.C_CPP/CMake/3.Example/ext_modbus/lib/pid/: pid.h
5.C_CPP/CMake/3.Example/ext_modbus/mbpoll/: README.md  parmgrp.mbp
5.C_CPP/CMake/3.Example/ext_modbus/src/: main.c  para_group.c  para_table.c
5.C_CPP/CMake/3.Example/flash_prog/: main.c
5.C_CPP/CMake/3.Example/i2c/mpu6050_i2c/: CMakeLists.txt  mpu6050_i2c.c  mpu6050_i2c.uf2
5.C_CPP/CMake/3.Example/pio/ws2812/: ws2812.c
5.C_CPP/CMake/3.Example/pio_st7789/: CMakeLists.txt
5.C_CPP/CMake/3.Example/pio_ws2812/: CMakeLists.txt  ws2812.c
5.C_CPP/CMake/3.Example/spi/st7789/: CMakeLists.txt  lcd_conf.h
5.C_CPP/CMake/3.Example/spi_st7789/: lcd.h  main.cpp
5.C_CPP/CMake/3.Example/tim_keyfifo/: c.c  main.c
5.C_CPP/CMake/3.Example/uart_esp01/__org/: README.md
5.C_CPP/CMake/3.Example/uart_esp01/lib/: CMakeLists.txt
5.C_CPP/CMake/3.Example/uart_esp01/lib/espat/: CMakeLists.txt  espat_wifi.c
5.C_CPP/CMake/3.Example/uart_esp01/src/tcp_client/: CMakeLists.txt  tcp_client.cpp
5.C_CPP/CMake/3.Example/uart_esp01/src/tcp_server/: CMakeLists.txt  tcp_server.cpp
5.C_CPP/CMake/3.Example/uart_esp01/src/udp_client/: CMakeLists.txt  udp_client.cpp
5.C_CPP/CMake/3.Example/usb_printf/: main.c
5.C_CPP/MDK/: RAEDME.md
5.C_CPP/MDK/3.Example/Pico_Template/project/mdk/: template.uvoptx  template.uvprojx
5.C_CPP/MDK/3.Example/ext_EmberGL/: README.md  main.c
5.C_CPP/MDK/3.Example/ext_EmberGL/libraries/st7789/: lcd.c  (+2 more)
5.C_CPP/pico-sdk/: README.md  version.txt
5.MicroPython/1.Toolchain/: README.md
5.MicroPython/2.Firmware/: README.md  micropython_ulab (numpy&scipy).uf2
5.MicroPython/3.Example/0.module/: st7789.py
5.MicroPython/3.Example/1.base/: module.txt
5.MicroPython/3.Example/2.tcpclient/: README.md  main.py
5.MicroPython/3.Example/4.music/: main.py
5.MicroPython/3.Example/5.pio_music/: README.md  pio_beep.py
5.MicroPython/3.Example/6.esphttp/: README.md
5.MicroPython/3.Example/6.esphttp/example/: basic_test.py
5.MicroPython/3.Example/basic_test/: README.md
5.MicroPython/3.Example/pwm_music/: README.md
5.MicroPython/3.Example/spi_lcd/: README.md  module.txt
5.MicroPython/3.Example/uart_wifi_tcpclient/: pdm.py
5.MicroPython/3.Example/usb_badusb/payloads/pico_computer_info_discord/: payload.txt
5.MicroPython/3.Example/usb_badusb/software/: boot.py  code.py
5.MicroPython/3.Example/usb_badusb/software/payloads/: 0000_open_tools.txt
5.MicroPython/3.Examples/basic_test/: main.py  mpu6050.py
5.MicroPython/3.Examples/pio_music/: main.py
5.MicroPython/3.Examples/spi_lcd/: main.py
5.MicroPython/3.Examples/uart_wifi_esphttp/example/: http_client.py
5.MicroPython/3.Examples/uart_wifi_esphttp/libraries/: esp_at_uart.py
5.MicroPython/3.Examples/usb_badusb/: README.md
5.MicroPython/3.Examples/usb_badusb/payloads/bashbunny/: b.ps1  payload.txt
5.MicroPython/3.Examples/usb_badusb/software/payloads/: 0001_discord_pcinfo.txt
(+90 files in other folders)
