if (TARGET tinyusb_device)
        add_executable(mpu6050_i2c
                mpu6050_i2c.c
                )

        # pull in common dependencies and additional i2c hardware support
        target_link_libraries(mpu6050_i2c pico_stdlib hardware_i2c)

        # enable usb output, disable uart output
        pico_enable_stdio_usb(mpu6050_i2c 1)
        pico_enable_stdio_uart(mpu6050_i2c 0)

        # create map/bin/hex file etc.
        pico_add_extra_outputs(mpu6050_i2c)

        # add url via pico_set_program_url
        example_auto_set_url(mpu6050_i2c)

elseif(PICO_ON_DEVICE)
    message(WARNING "not building mpu6050_i2c because TinyUSB submodule is not initialized in the SDK")
endif()
